# script-splitter

./: .gitignore  README.md  Script Splitter.command  pyproject.toml  requirements.txt
.agents/skills/: developing-with-streamlit
Script Splitter.app/Contents/: Info.plist
app/: db_browser.py  gui.py  main.py  rules_manager.py
app/static/: style.css
app/templates/: entities.html  index.html  instance_db.html  layout.html  results.html  rules.html
deploy/linux/: run.sh
deploy/macos/: run.command
deploy/windows/: run.bat
docs/: RULES.md  SCHEMA.md
output/data/: global_characters.jsonl  global_location_assets.jsonl  global_visual_elements.jsonl  parse_report.json  scene_character_instances.jsonl  scene_location_instances.jsonl  scene_visual_elements.jsonl  scenes.jsonl  shots.jsonl
output/scenes/: S001.md  S002.md  S003.md  S004.md  S005.md  S006.md  S007.md  S008.md  S009.md  S010.md  S011.md  S012.md  S013.md  S014.md  S015.md  S016.md  S017.md  S018.md  S019.md  S020.md  S021.md  S022.md  S023.md  S024.md  S025.md  S026.md  S027.md  S028.md  S029.md  S030.md  S031.md  S032.md  S033.md  S034.md  S035.md  S036.md  S037.md  S038.md  S039.md  S040.md  (+23 more)
rules/: active_ruleset.json  ai_rules.yaml  rules.yaml
script_splitter/: __init__.py  instance_db.py  pipeline.py  rules_db.py
script_splitter/clarifier/: __init__.py  docx_clarifier.py  markdown_refiner.py  pdf_clarifier.py
script_splitter/exporters/: __init__.py  output_package.py
script_splitter/input_adapters/: models.py  (+2 more)
tests/: test_scene_heading_parser.py  test_schemas.py  test_stage1_split.py
(+29 files in other folders)
