 [project]
 name = "script-splitter"
 version = "0.2.0"
 description = "Hybrid screenplay parser: layout-aware clarifier + rule-based entity extraction + LLM semantic routing."
 requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.7,<3",
     "pypdf>=5,<7",
     "pdfplumber>=0.11,<1",
     "python-docx>=1.1,<2",
     "spacy>=3.7,<4",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8,<9",
     "openai>=1.0,<2",
 ]
 
 [tool.setuptools.packages.find]
 include = ["script_splitter*", "app*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["."]
 
